# codes_for_stepwise_optimizations

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
src/XRD_pattern/: readme.txt
src/XRD_pattern/atom_scattering_factor_list/: C.txt  C_val HF.txt  Cl-.txt  H HF.txt  H.txt  Na+.txt  O.txt  S.txt  method.txt
src/XRD_pattern/cryst/: ANTCEN09.xyz  HEXCEN01.xyz  NAPHTHA12.xyz  PENCEN01.xyz  PENCEN09.xyz  PENCEN10.xyz  TETCEN01.xyz  TETCEN04.xyz
src/XRD_pattern/opt_model/: anthracene.xyz  hexacene.xyz  naphthalene.xyz  pentacene_ht.xyz  pentacene_sc.xyz  pentacene_tf.xyz  tetracene_sc.xyz  tetracene_tf.xyz
src/XRD_pattern/src/: powder pattern model.ipynb
src/result_csv/step1/pentacene/: step1.csv
src/result_csv/step2_para/pentacene/: step2_para.csv
src/result_csv/step2_twist/anthracene/: step2_twist_0.csv  step2_twist_1.csv
src/result_csv/step2_twist/naphthalene/: step2_twist_0.csv  step2_twist_1.csv
src/result_csv/step3_twist/anthracene/: step3_twist.csv
src/result_csv/step3_twist/naphthalene/: step3_twist.csv
src/stepwise_optimization/: make_step1.py  make_step2_para.py  make_step2_twist.py  make_step3_para.py  make_step3_twist.py  readme.txt  step1.py  step2_para.py  step2_twist.py  step3_para.py  step3_para_vdw.py  step3_twist.py  vdw.py
src/tcal_csv/: job.sh  readme.txt  tcal_1.py  tcal_csv.py  utils.py
src/tot_energy/: L1_norm.py  read_me.txt  tot_energy.py  utils.py
